--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -2046,23 +2046,23 @@
             <objects>
                 <viewController id="nDm-M9-2ed" customClass="ExportOptionViewController" customModule="spriteMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nFh-H8-bF6">
-                        <rect key="frame" x="0.0" y="0.0" width="330" height="150"/>
+                        <rect key="frame" x="0.0" y="0.0" width="330" height="200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="YV1-op-sWg">
-                                <rect key="frame" x="0.0" y="0.0" width="330" height="150"/>
+                                <rect key="frame" x="0.0" y="0.0" width="330" height="200"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKk-4p-f17">
                                         <rect key="frame" x="0.0" y="0.0" width="330" height="49.333333333333336"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change GIF to LivePhoto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUl-44-q5M">
-                                                <rect key="frame" x="5" y="14.666666666666666" width="199.66666666666666" height="20.333333333333336"/>
+                                                <rect key="frame" x="5" y="14.333333333333334" width="199.66666666666666" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="s7H-4q-8Fl">
-                                                <rect key="frame" x="276" y="9.3333333333333357" width="51" height="31"/>
+                                                <rect key="frame" x="276" y="9" width="51" height="31"/>
                                                 <connections>
                                                     <action selector="changeGifToLivephoto:" destination="nDm-M9-2ed" eventType="valueChanged" id="7BW-Va-zCv"/>
                                                 </connections>
@@ -2080,13 +2080,13 @@
                                         <rect key="frame" x="0.0" y="50.333333333333329" width="330" height="49.333333333333329"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add category color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQg-kW-2zV">
-                                                <rect key="frame" x="5" y="14.666666666666663" width="155" height="20.333333333333329"/>
+                                                <rect key="frame" x="5" y="14.333333333333334" width="155" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="1To-iw-J8g">
-                                                <rect key="frame" x="276" y="9.3333333333333286" width="51" height="31"/>
+                                                <rect key="frame" x="276" y="9" width="51" height="31"/>
                                             </switch>
                                         </subviews>
                                         <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -2098,16 +2098,16 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3J0-9W-LQy">
-                                        <rect key="frame" x="0.0" y="100.66666666666667" width="330" height="49.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="100.66666666666667" width="330" height="49.000000000000014"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Image size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X3b-6v-MOs">
-                                                <rect key="frame" x="5" y="14.666666666666655" width="87" height="20.333333333333329"/>
+                                                <rect key="frame" x="5" y="14.333333333333327" width="87" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="PMZ-XM-8rx">
-                                                <rect key="frame" x="163" y="9.3333333333333286" width="162" height="32"/>
+                                                <rect key="frame" x="163" y="9" width="162" height="32"/>
                                                 <segments>
                                                     <segment title="256px" width="50"/>
                                                     <segment title="512px" width="50"/>
@@ -2126,9 +2126,39 @@
                                             <constraint firstItem="PMZ-XM-8rx" firstAttribute="centerY" secondItem="3J0-9W-LQy" secondAttribute="centerY" id="mrB-dB-NVU"/>
                                         </constraints>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NIb-oJ-7WH">
+                                        <rect key="frame" x="0.0" y="150.66666666666666" width="330" height="49.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Background color" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUn-Hl-FnX">
+                                                <rect key="frame" x="5" y="14.666666666666684" width="143.66666666666666" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="ez9-EH-8Qi">
+                                                <rect key="frame" x="158" y="9.3333333333333428" width="167" height="32"/>
+                                                <segments>
+                                                    <segment title="Black"/>
+                                                    <segment title="White"/>
+                                                    <segment title="None"/>
+                                                </segments>
+                                                <connections>
+                                                    <action selector="changeBackgroundColor:" destination="nDm-M9-2ed" eventType="valueChanged" id="uf5-zT-BFZ"/>
+                                                </connections>
+                                            </segmentedControl>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="ez9-EH-8Qi" firstAttribute="centerY" secondItem="NIb-oJ-7WH" secondAttribute="centerY" id="51n-t0-Bfk"/>
+                                            <constraint firstAttribute="trailing" secondItem="ez9-EH-8Qi" secondAttribute="trailing" constant="5" id="7NR-d3-aET"/>
+                                            <constraint firstItem="oUn-Hl-FnX" firstAttribute="centerY" secondItem="NIb-oJ-7WH" secondAttribute="centerY" id="95H-Fu-z9J"/>
+                                            <constraint firstItem="oUn-Hl-FnX" firstAttribute="leading" secondItem="NIb-oJ-7WH" secondAttribute="leading" constant="5" id="GCJ-o4-Bcv"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="3jF-Sa-0ZQ" firstAttribute="height" secondItem="3J0-9W-LQy" secondAttribute="height" id="UWH-Dl-u0X"/>
+                                    <constraint firstItem="NIb-oJ-7WH" firstAttribute="height" secondItem="3J0-9W-LQy" secondAttribute="height" id="WOK-g3-wuN"/>
                                     <constraint firstItem="cKk-4p-f17" firstAttribute="height" secondItem="3jF-Sa-0ZQ" secondAttribute="height" id="olj-3F-Lyb"/>
                                 </constraints>
                             </stackView>
@@ -2141,10 +2171,13 @@
                             <constraint firstAttribute="bottom" secondItem="YV1-op-sWg" secondAttribute="bottom" id="mFx-cj-GJ8"/>
                         </constraints>
                     </view>
-                    <size key="freeformSize" width="330" height="150"/>
+                    <size key="freeformSize" width="330" height="200"/>
                     <connections>
                         <outlet property="addCategoryColor" destination="1To-iw-J8g" id="cLm-Li-ENG"/>
+                        <outlet property="backgroundColorValue" destination="ez9-EH-8Qi" id="e6d-rB-ewu"/>
                         <outlet property="imageSizeValue" destination="PMZ-XM-8rx" id="IU0-Gq-n43"/>
+                        <outlet property="isChangedToLivePhoto" destination="s7H-4q-8Fl" id="gal-IL-Wu8"/>
+                        <outlet property="optionStackView" destination="YV1-op-sWg" id="jhX-cR-njV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NHz-jv-dus" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
