--- a/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
+++ b/spriteMaker/spriteMaker/Base.lproj/Main.storyboard
@@ -1751,7 +1751,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KDB-UP-bJW">
-                                                            <rect key="frame" x="33.333333333333329" y="33.333333333333343" width="62.333333333333329" height="61.000000000000014"/>
+                                                            <rect key="frame" x="33.333333333333329" y="32.333333333333343" width="62.333333333333329" height="62.333333333333343"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="KDB-UP-bJW" secondAttribute="height" multiplier="1:1" id="6GJ-vc-Hpo"/>
                                                             </constraints>
@@ -2163,6 +2163,7 @@
                                 </constraints>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="cxl-Gm-wiV"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="YV1-op-sWg" firstAttribute="top" secondItem="nFh-H8-bF6" secondAttribute="top" id="4or-mZ-3Mj"/>
